added docker compose

--- a/dockerfile/Dockerfile.yml
+++ b/dockerfile/Dockerfile.yml
@@ -12,12 +12,13 @@ RUN apt-get update && \
     git -y \
     ca-certificates \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
-
-USER root    
+  
 
 # Set JAVA_HOME environment variable
-ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
-ENV PATH=$JAVA_HOME/bin:$PATH
+RUN export JAVA_HOME="$(dirname $(dirname $(readlink -f $(which java))))"
+RUN export MAVEN_HOME="$(dirname $(dirname $(readlink -f $(which mvn))))"
+ENV PATH=$JAVA_HOME/bin:$MAVEN_HOME/bin:$PATH
+
 
 
 
@@ -25,8 +26,13 @@ ENV PATH=$JAVA_HOME/bin:$PATH
 RUN echo $PATH
 
 RUN echo $JAVA_HOME && \
+    echo "Print java Path" && \
+    which java && \
     java -version && \
     javac -version && \
+    echo "Print MVN path" && \
+    which mvn && \
+    which git && \
     mvn -version && \
     git --version
 
@@ -38,7 +44,7 @@ WORKDIR /usr/src/app
 COPY . /usr/src/app
 
 # Build the project using Maven
-RUN mvn clean package
+RUN mvn clean package -Dmaven.test.skip=true
 
 # Expose the port that the user service will run on
 EXPOSE 8081
