--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=UserService
+# application.properties
+spring.cloud.config.enabled=false
+spring.cloud.config.import-check.enabled=false
