--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,13 @@
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true   
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://192.168.49.2:31489/eureka 
+
+
 server:
   port: 8081
 
@@ -5,9 +15,10 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/user_db
+    url: jdbc:mysql://127.0.0.1:3306/user_db
     username: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+    password: admin123
 
 
 
@@ -21,17 +32,4 @@ spring:
 
 
   application:
-    name: USER-SERVICE
-
-  config:
-    import: configserver:http://localhost:8085/   
-
-
-# eureka:
-#   instance:
-#     prefer-ip-address: true
-#   client:
-#     fetch-registry: true   
-#     register-with-eureka: true
-#     service-url:
-#       defaultZone: http://localhost:8761/eureka     
+    name: USER-SERVICE  
